feat: Add initial portfolio website structure and core UI components, including sections, layout, and a terminal UI.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=5, user-scalable=yes" />
+    <meta name="theme-color" content="#09090d" />
 
     <!-- SEO Meta Tags -->
     <title>Zeeshan Mirza | Full-Stack Developer & System Architect</title>
@@ -21,7 +22,7 @@
     <meta property="og:title" content="Zeeshan Mirza | Full-Stack Developer" />
     <meta
       property="og:description"
-      content="Building scalable web platforms with production-ready code and system-level thinking."
+      content="Building scalable web platforms with production-ready code and system-level design."
     />
     <meta property="og:type" content="website" />
 
